--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,6 +47,8 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Deploy to Azure VM
+      # NOTE: Deployment requires Azure VM secrets to be configured in GitHub Settings
+      # Required secrets: AZURE_VM_HOST, AZURE_VM_USERNAME, AZURE_VM_SSH_KEY
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.AZURE_VM_HOST }}
@@ -57,4 +59,4 @@ jobs:
           git pull origin main
           docker-compose down
           docker-compose up -d --build
-          echo "Deployment to Azure VM completed!"
+          echo "🚀 Deployment to Azure VM completed!"
